--- a/project/src/app/home/home.page.html
+++ b/project/src/app/home/home.page.html
@@ -7,8 +7,9 @@
   </ion-header>
 
   <ion-content class="ion-padding">
+
     <ion-menu-toggle>
-      <ion-button> Close to Menu </ion-button>
+    <ion-button> Close to Menu </ion-button>
     </ion-menu-toggle>
 
     <ion-menu-toggle autoHide="false">
@@ -17,20 +18,24 @@
     
 
     <ion-menu-toggle>
-      <ion-button> Configurações </ion-button>
+      <ion-button (click)="novapagina()"> Configurações </ion-button>
     </ion-menu-toggle>
 
   </ion-content>
 </ion-menu>
+
+
 <div class="ion-page" id="main-content">
   <ion-header>
     <ion-toolbar>
       <ion-title>Menu</ion-title>
     </ion-toolbar>
   </ion-header>
+
   <ion-content class="ion-padding">
     <ion-menu-toggle>
       <ion-card color="warning">
+
         <ion-card-header>
           <ion-card-title>Card Title</ion-card-title>
           <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
@@ -42,6 +47,7 @@
             <p>Here's a small text description for the card content. Nothing more, nothing less.</p>
           </div>
         </ion-card-content>
+        
       </ion-card>
       
         
