--- a/project/src/app/home/home.page.html
+++ b/project/src/app/home/home.page.html
@@ -34,44 +34,26 @@
 
   <ion-content class="ion-padding">
     <ion-menu-toggle>
-      <ion-card color="warning">
-
+      <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+      <ion-card-header>
+        <ion-card-title>Card Title</ion-card-title>
+        <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+      </ion-card-header>
+    
+      <ion-card-content>
+        Here's a small text description for the card content. Nothing more, nothing less.
+      </ion-card-content>
+      
+        <!-- winuirbv uiiufiuer  -->
+        <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
         <ion-card-header>
           <ion-card-title>Card Title</ion-card-title>
           <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
         </ion-card-header>
-        
-        <ion-card-content>
-          <div class="card-content">
-            <ion-img src="caminho_da_imagem.png"></ion-img> <!-- Substitua 'caminho_da_imagem.png' pelo caminho real da imagem -->
-            <p>Here's a small text description for the card content. Nothing more, nothing less.</p>
-          </div>
-        </ion-card-content>
-        
-      </ion-card>
       
-        
-        <ion-card>
-          <ion-card-header>
-            <ion-card-title>Card Title</ion-card-title>
-            <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
-          </ion-card-header>
-        
-          <ion-card-content>
-            Here's a small text description for the card content. Nothing more, nothing less.
-          </ion-card-content>
-        </ion-card>
-        
-        <ion-card>
-          <ion-card-header>
-            <ion-card-title>Card Title</ion-card-title>
-            <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
-          </ion-card-header>
-        
-          <ion-card-content>
-            Here's a small text description for the card content. Nothing more, nothing less.
-          </ion-card-content>
-        </ion-card>
+        <ion-card-content>
+          Here's a small text description for the card content. Nothing more, nothing less.
+        </ion-card-content>
 
       <ion-button>Click to open the menu</ion-button>
     </ion-menu-toggle>
