--- a/project/src/app/new-lembrete/new-lembrete.page.html
+++ b/project/src/app/new-lembrete/new-lembrete.page.html
@@ -12,11 +12,9 @@
         Home
     </ion-button>
   </ion-content>
-
 </ion-menu>
 
 <div class="ion-page" id="main-content">
-
   <ion-header>
     <ion-toolbar>
       <ion-buttons slot="start">
@@ -24,7 +22,54 @@
       </ion-buttons>
       <ion-title>Menu</ion-title>
     </ion-toolbar>
+    
   </ion-header>
-  
-  <ion-content class="ion-padding"> Tap the button in the toolbar to open the menu. </ion-content>
+
+  <!-- Parte do cabeçalho dos campos input-->
+  <ion-content class="ion-padding"> 
+    <ion-input
+      type="email"
+      fill="solid"
+      label="Nome"
+      labelPlacement="floating"
+      helperText="Enter a valid email"
+      errorText="Invalid email"
+      ngModel
+      email
+   ></ion-input>
+
+   <ion-input
+      type="email"
+      fill="solid"
+      label="Email"
+      labelPlacement="floating"
+      helperText="Enter a valid email"
+      errorText="Invalid email"
+      ngModel
+      email
+></ion-input>
+
+<ion-input
+  type="email"
+  fill="solid"
+  label="Email"
+  labelPlacement="floating"
+  helperText="Enter a valid email"
+  errorText="Invalid email"
+  ngModel
+  email
+></ion-input>
+
+<ion-input
+  type="email"
+  fill="solid"
+  label="Email"
+  labelPlacement="floating"
+  helperText="Enter a valid email"
+  errorText="Invalid email"
+  ngModel
+  email
+></ion-input>
+  </ion-content>
+
 </div>
