--- a/project/src/app/home/home.page.html
+++ b/project/src/app/home/home.page.html
@@ -1,62 +1,43 @@
+<!-- cabecalho do menu-->
 <ion-menu contentId="main-content">
-
   <ion-header>
     <ion-toolbar>
       <ion-title>Menu Content</ion-title>
     </ion-toolbar>
   </ion-header>
-
+<!-- conteudo do menu -->
   <ion-content class="ion-padding">
 
-    <ion-menu-toggle>
-    <ion-button> Close to Menu </ion-button>
-    </ion-menu-toggle>
-
-    <ion-menu-toggle autoHide="false">
-      <ion-button (click) = "novapagina()"> New Lembretes </ion-button>
-    </ion-menu-toggle>
-    
-
-    <ion-menu-toggle>
-      <ion-button (click)="novapagina()"> Configurações </ion-button>
-    </ion-menu-toggle>
+    <ion-button (click)="navNewLembrete()">new-lembrete</ion-button>
+    <ion-button>CONFIGURAÇOES</ion-button>
 
   </ion-content>
+
 </ion-menu>
-
-
+<!-- pagina inicial-->
 <div class="ion-page" id="main-content">
   <ion-header>
     <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
       <ion-title>Menu</ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <ion-content class="ion-padding">
-    <ion-menu-toggle>
-      <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
-      <ion-card-header>
-        <ion-card-title>Card Title</ion-card-title>
-        <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
-      </ion-card-header>
-    
-      <ion-card-content>
-        Here's a small text description for the card content. Nothing more, nothing less.
-      </ion-card-content>
-      
-        <!-- winuirbv uiiufiuer  -->
-        <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
-        <ion-card-header>
-          <ion-card-title>Card Title</ion-card-title>
-          <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
-        </ion-card-header>
-      
-        <ion-card-content>
-          Here's a small text description for the card content. Nothing more, nothing less.
-        </ion-card-content>
-
-      <ion-button>Click to open the menu</ion-button>
-    </ion-menu-toggle>
+  <!-- conteudo pagina inical-->
+  <ion-content class="ion-padding"> 
+      <ion-button (click)="visualizarDados()">Visualizar Dados</ion-button>
+      <!-- Tabela para exibir os dados -->
+      <ion-list>
+        <ion-item *ngIf="dados">
+          <ion-label>Nome</ion-label>
+          <ion-note>{{ dados.nome }}</ion-note>
+        </ion-item>
+        <ion-item *ngIf="dados">
+          <ion-label>Email</ion-label>
+          <ion-note>{{ dados.email }}</ion-note>
+        </ion-item>
+        <!-- Outros campos e informações do formulário -->
+      </ion-list>
   </ion-content>
-</div>  
-
+</div>
