--- a/project/src/app/home/home.page.scss
+++ b/project/src/app/home/home.page.scss
@@ -1,6 +1,6 @@
 #container {
   text-align: center;
-  
+
   position: absolute;
   left: 0;
   right: 0;
@@ -25,6 +25,6 @@
 #container a {
   text-decoration: none;
 }
-ion-content {
-  --background: linear-gradient(45deg, #030753, #1721e7);
+#ion-item{
+  background-color: red;
 }
