--- a/project/src/app/home/home.page.html
+++ b/project/src/app/home/home.page.html
@@ -31,12 +31,23 @@
         <ion-thumbnail slot="start">
           <img [src]="dado.imagem" alt="Imagem">
         </ion-thumbnail>
-        <ion-label>
-          <h2>{{ dado.imagem }}</h2>
-          <p>{{ dado.nome }}</p>
-          <p>{{ dado.email }}</p>
-          <p>{{ dado.telefone }}</p>
-        </ion-label>
+        
+          <ion-item-sliding>
+            <ion-item>
+              <ion-label>
+                <h2>{{ dado.imagem }}</h2>
+                <p>{{ dado.nome }}</p>
+                <p>{{ dado.email }}</p>
+                <p>{{ dado.telefone }}</p>
+              </ion-label>
+            </ion-item>
+        
+            <ion-item-options>
+              <ion-item-option>Favorite</ion-item-option>
+              <ion-item-option (click)="apagar(dado)" color="danger">Delete</ion-item-option>
+            </ion-item-options>
+          </ion-item-sliding>
+        
       </ion-item>
     </ion-list>
     <ion-button (click)="carregarMaisItens()">Carregar Mais</ion-button>  
