--- a/project/src/app/home/home.page.html
+++ b/project/src/app/home/home.page.html
@@ -39,6 +39,7 @@
                 <p>{{ dado.nome }}</p>
                 <p>{{ dado.email }}</p>
                 <p>{{ dado.telefone }}</p>
+                <p>{{ dado.id }}</p>
               </ion-label>
             </ion-item>
         
