config method update item

--- a/project/src/app/home/home.page.html
+++ b/project/src/app/home/home.page.html
@@ -1,11 +1,11 @@
 <!-- cabecalho do menu-->
-<ion-menu contentId="main-content">
+<!--<ion-menu contentId="main-content">
   <ion-header>
     <ion-toolbar>
       <ion-title>Menu Content</ion-title>
     </ion-toolbar>
   </ion-header>
-<!-- conteudo do menu -->
+<!-- conteudo do menu 
   <ion-content class="ion-padding">
 
     <ion-button (click)="navNewLembrete()">new-lembrete</ion-button>
@@ -13,19 +13,24 @@
 
   </ion-content>
 
-</ion-menu>
+</ion-menu>-->
 <!-- pagina inicial-->
-<div class="ion-page" id="main-content">
+
   <ion-header>
     <ion-toolbar>
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
-      <ion-title>Menu</ion-title>
+      <ion-title> Seus Lembretes </ion-title>
     </ion-toolbar>
   </ion-header>
   <!-- conteudo pagina inical-->
-  <ion-content>
+  <ion-content [scrollEvents]="true">
+    <ion-refresher slot="fixed" (ionRefresh)="atualizarConteudo($event)">
+      <ion-refresher-content pullingIcon="arrow-down" pullingText="Puxe para atualizar" refreshingSpinner="circles" refreshingText="Atualizando...">
+      </ion-refresher-content>
+    </ion-refresher>
+
     <ion-list>
       <ion-item *ngFor="let dado of dadosExibicao">
         <ion-thumbnail slot="start">
@@ -44,14 +49,15 @@
             </ion-item>
         
             <ion-item-options>
-              <ion-item-option>Favorite</ion-item-option>
+              <ion-item-option (click)="updateObjeto(dado.id)">Favorite</ion-item-option>
+            
               <ion-item-option (click)="apagar(dado)" color="danger">Delete</ion-item-option>
             </ion-item-options>
           </ion-item-sliding>
         
       </ion-item>
+      
     </ion-list>
     <ion-button (click)="carregarMaisItens()">Carregar Mais</ion-button>  
   </ion-content>
   
-</div>
