--- a/project/src/app/update-item/update-item.page.html
+++ b/project/src/app/update-item/update-item.page.html
@@ -1,13 +1,99 @@
-<ion-header [translucent]="true">
+  
+
+<div class="ion-page" id="main-content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content class="ion-padding">
+   
+    <ion-card *ngIf="item">
+      <ion-title> lembrete {{item.nome}}</ion-title>
+      <ion-card-content>
+        <ion-item>
+          <ion-label position="stacked">Nome</ion-label>
+          <ion-input [(ngModel)]="item.nome"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label position="stacked">Email</ion-label>
+          <ion-input [(ngModel)]="item.email"></ion-input>
+        </ion-item>
+        <ion-item>
+          <ion-label position="stacked">telefone</ion-label>
+          <ion-input [(ngModel)]="item.telefone"></ion-input>
+        </ion-item>
+
+        <!-- Exibindo a imagem atual -->
+
+        <ion-item>
+          <ion-label position="stacked">Imagem Atual</ion-label>
+          <ion-img [src]="item.imagem"></ion-img>
+        </ion-item>
+
+      <!-- Campo para atualizar a imagem -->
+      <ion-item>
+        <ion-label position="stacked">Nova Imagem</ion-label>
+        <input type="file" (change)="trocarFoto($event)">
+      </ion-item>
+
+
+      <ion-button (click)="atualizarItem()"> Update item </ion-button>
+
+      </ion-card-content>
+    </ion-card>  
+  </ion-content>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--
+
+<ion-header>
   <ion-toolbar>
-    <ion-title>updateItem</ion-title>
+    <ion-title>Editar Item</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">updateItem</ion-title>
-    </ion-toolbar>
+
+    
+    <ion-item>
+      <ion-input type="text" [(ngModel)]="item.nome" label="nome"></ion-input>
+    </ion-item>
+  
+    <ion-item>
+      <ion-input [(ngModel)]="item.telefone"></ion-input>
+    </ion-item>
+  
+    <ion-item>
+      <ion-input [(ngModel)]="item.email"></ion-input>
+    </ion-item>
+  
+    <ion-item>
+      <input type="file" (change)="trocarFoto($event)">
+      <img [src]="item.fotoUrl" *ngIf="item.fotoUrl" />
+    </ion-item>
+  
+    <!-- Outros campos para edição 
+  
+    <ion-button  (click)="atualizarItem()">Salvar</ion-button>
   </ion-header>
 </ion-content>
+
+
+-->
