--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -1,3 +1,38 @@
-<ion-app>
+<!--<ion-app>
   <ion-router-outlet></ion-router-outlet>
+</ion-app>
+-->
+
+
+
+
+
+
+
+<ion-app>
+  <ion-menu contentId="main-content">
+    <!-- Conteúdo do menu -->
+    <ion-header>
+      <ion-toolbar>
+        <ion-buttons auto-hide="false">
+          <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <ion-title>Menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <ion-button (click)="returnHome()">
+          Home
+        </ion-button>
+        <ion-button (click)="navNewLembrete()">
+          New Lembrete
+        </ion-button>
+        <!-- Adicione aqui os links para outras páginas-->
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+
+  <!-- Área onde o conteúdo das páginas será renderizado -->
+  <ion-router-outlet id="main-content"></ion-router-outlet>
 </ion-app>
