--- a/project/src/app/new-lembrete/new-lembrete.page.html
+++ b/project/src/app/new-lembrete/new-lembrete.page.html
@@ -1,17 +1,17 @@
 <!-- cabecalho do menu-->
-<ion-menu contentId="main-content">
+<!--<ion-menu contentId="main-content">
   <ion-header>
     <ion-toolbar>
       <ion-title>Menu Content</ion-title>
     </ion-toolbar>
   </ion-header>
-<!-- conteudo do menu -->
+<!-- conteudo do menu 
   <ion-content class="ion-padding">
     <ion-button (click)="returnHome()">CONFIGURAÇOES</ion-button>
 
   </ion-content>
 
-</ion-menu>
+</ion-menu>__>
 <!-- pagina inicial-->
 <div class="ion-page" id="main-content">
   <ion-header>
@@ -19,7 +19,7 @@
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
-      <ion-title>Menu</ion-title>
+      <ion-title> Cadastro novo Lembrete </ion-title>
     </ion-toolbar>
   </ion-header>
   <!-- conteudo pagina inical-->
