--- a/project/src/app/new-lembrete/new-lembrete.page.html
+++ b/project/src/app/new-lembrete/new-lembrete.page.html
@@ -23,11 +23,11 @@
     </ion-toolbar>
   </ion-header>
   <!-- conteudo pagina inical-->
-  <ion-content class="ion-padding"> Tap the button in the toolbar to open the menu. 
+  <ion-content class="ion-padding"> 
     <form (ngSubmit)="submitForm()" [formGroup]="meuForm">
       <ion-input type="text" formControlName="nome" placeholder="Nome"></ion-input>
-      <ion-input type="text" formControlName="email" placeholder="Email"></ion-input>
-      <ion-input type="text" formControlName="telefone" placeholder="telefone"></ion-input>
+      <ion-input type="text" formControlName="Detalhe" placeholder="Detalhe"></ion-input>
+      <ion-input type="text" formControlName="Horario" placeholder="Horario"></ion-input>
       <input type="file" (change)="onFileSelected($event)" accept="image/*">
 
       <ion-button type="submit">Enviar</ion-button>
