--- a/project/src/app/update-item/update-item.page.html
+++ b/project/src/app/update-item/update-item.page.html
@@ -19,12 +19,12 @@
           <ion-input [(ngModel)]="item.nome"></ion-input>
         </ion-item>
         <ion-item>
-          <ion-label position="stacked">Email</ion-label>
-          <ion-input [(ngModel)]="item.email"></ion-input>
+          <ion-label position="stacked">Detalhe</ion-label>
+          <ion-input [(ngModel)]="item.Detalhe"></ion-input>
         </ion-item>
         <ion-item>
-          <ion-label position="stacked">telefone</ion-label>
-          <ion-input [(ngModel)]="item.telefone"></ion-input>
+          <ion-label position="stacked">Horario</ion-label>
+          <ion-input [(ngModel)]="item.Horario"></ion-input>
         </ion-item>
 
         <!-- Exibindo a imagem atual -->
