implementação de um calendario e organização do forms , salvamento no storage ok

--- a/project/src/app/new-lembrete/new-lembrete.page.html
+++ b/project/src/app/new-lembrete/new-lembrete.page.html
@@ -28,10 +28,12 @@
       <ion-input type="text" formControlName="nome" placeholder="Nome"></ion-input>
       <ion-input type="text" formControlName="Detalhe" placeholder="Detalhe"></ion-input>
       <ion-input type="text" formControlName="Horario" placeholder="Horario"></ion-input>
+      <ion-datetime displayFormat="DD/MM/YYYY HH:mm" formControlName="dataHoraSelecionada" placeholder="Horario"></ion-datetime>
       <input type="file" (change)="onFileSelected($event)" accept="image/*">
 
       <ion-button type="submit">Enviar</ion-button>
       <ion-button (click)="visualizarDados()">Visualizar Dados Salvos</ion-button>
+     
 
     </form>
   </ion-content>
